Optimisations diverses (ajout de commentaires et correction du padding du Footer en version mobile

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -195,7 +195,7 @@ input {
     height: 50px;
     width: 11em;
 }
-
+/***** Boutton familial plus petit, application de la classe btn-familial*****/
 .btn-familial {
     width: 9em;
 }
@@ -574,7 +574,7 @@ input {
         padding: 20px;
     }
     
-    /***** Repositionnement du formulaire *****/
+/***** Repositionnement du formulaire *****/
     .rechercher {
         display: flex;
         justify-content: center;
@@ -609,6 +609,7 @@ input {
         flex-direction: column-reverse;
     }
 
+/***** Changement des marges et des couleurs pour la version mobile *****/
     .hebergements {
         background-color: #FFFFFF;
     }
@@ -676,7 +677,6 @@ input {
         margin-bottom: 50px;
     }
     
-    
     .activites__img {
         width: 100%;
         height: 140px;
@@ -702,8 +702,8 @@ input {
     .pied-de-page {
         flex-direction: column;
         margin-top: 30px;
+        padding-left: 20px;
         height: 500px;
-        background-color: #F2F2F2;
     }
 
 }
